apps/gotify/gotify-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotify
  template:
    metadata:
      labels:
        app: gotify
    spec:
      containers:
        - name: gotify
          image: 127.0.0.1:32000/gotify
          ports:
            - name: gotify
              containerPort: 3000
          volumeMounts:
            - name: gotify
              subPath: data
              mountPath: /var/data/
          livenessProbe:
            httpGet:
              path: /health
              port: gotify
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /health
              port: gotify
              scheme: HTTP
      volumes:
        - name: gotify
          persistentVolumeClaim:
            claimName: gotify
        - name: gotify-secret
          secret:
            secretName: gotify-secret
