apps/gotify/gotify-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify
spec:
  type: ClusterIP
  selector:
    app: gotify
  ports:
    - name: gotify
      port: 3000
      targetPort: 3000
