apps/gotify/gotify-ext-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gotify-ext
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    type: external
spec:
  tls:
    - hosts:
        - gotify.former-hostname.com
      secretName: gotify.former-hostname.com
  rules:
    - host: gotify.former-hostname.com
      http:
        paths:
          - backend:
              serviceName: gotify
              servicePort: 3000
            path: /
