apps/gotify/gotify-local-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gotify-local
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    type: local
spec:
  rules:
    - host: gotify.local
      http:
        paths:
          - backend:
              serviceName: gotify
              servicePort: 3000
            path: /
